Fix for toggled checkbox spacing

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -1,7 +1,7 @@
 @mixin oForms($class: 'o-forms') {
 	.#{$class} {
 		@include oFormsGroup();
-		@include oFormsRadioCheckboxGroup((radio: '.#{$class}__radio', checkbox: '.#{$class}__checkbox', label: '.#{$class}__label'));
+		@include oFormsRadioCheckboxGroup((radio: '.#{$class}__radio', checkbox: '.#{$class}__checkbox', checkbox-toggle: '.#{$class}__checkbox-toggle__checkbox', label: '.#{$class}__label'));
 	}
 
 	.#{$class}__text,
